Created Dataframes for Question 1

--- a/Pet Project .ipynb
+++ b/Pet Project .ipynb
@@ -2,12 +2,503 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Set up dependencies \n"
+    "#Set up dependencies \n",
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "import json \n",
+    "from config import api_key\n",
+    "from pprint import pprint"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>intakedate</th>\n",
+       "      <th>intakereason</th>\n",
+       "      <th>istransfer</th>\n",
+       "      <th>sheltercode</th>\n",
+       "      <th>identichipnumber</th>\n",
+       "      <th>animalname</th>\n",
+       "      <th>breedname</th>\n",
+       "      <th>basecolour</th>\n",
+       "      <th>speciesname</th>\n",
+       "      <th>...</th>\n",
+       "      <th>movementdate</th>\n",
+       "      <th>movementtype</th>\n",
+       "      <th>istrial</th>\n",
+       "      <th>returndate</th>\n",
+       "      <th>returnedreason</th>\n",
+       "      <th>deceaseddate</th>\n",
+       "      <th>deceasedreason</th>\n",
+       "      <th>diedoffshelter</th>\n",
+       "      <th>puttosleep</th>\n",
+       "      <th>isdoa</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15801</td>\n",
+       "      <td>2009-11-28 00:00:00</td>\n",
+       "      <td>Moving</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C09115463</td>\n",
+       "      <td>0A115D7358</td>\n",
+       "      <td>Jadzia</td>\n",
+       "      <td>Domestic Short Hair</td>\n",
+       "      <td>Tortie</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017-05-13 00:00:00</td>\n",
+       "      <td>Adoption</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Died in care</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>15932</td>\n",
+       "      <td>2009-12-08 00:00:00</td>\n",
+       "      <td>Moving</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D09125594</td>\n",
+       "      <td>0A11675477</td>\n",
+       "      <td>Gonzo</td>\n",
+       "      <td>German Shepherd Dog/Mix</td>\n",
+       "      <td>Tan</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017-04-24 00:00:00</td>\n",
+       "      <td>Adoption</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Died in care</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>28859</td>\n",
+       "      <td>2012-08-10 00:00:00</td>\n",
+       "      <td>Abandoned</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D12082309</td>\n",
+       "      <td>0A13253C7B</td>\n",
+       "      <td>Maggie</td>\n",
+       "      <td>Shep Mix/Siberian Husky</td>\n",
+       "      <td>Various</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017-04-15 00:00:00</td>\n",
+       "      <td>Adoption</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Died in care</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>30812</td>\n",
+       "      <td>2013-01-11 00:00:00</td>\n",
+       "      <td>Abandoned</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C1301091</td>\n",
+       "      <td>0A13403D4D</td>\n",
+       "      <td>Pretty Girl</td>\n",
+       "      <td>Domestic Short Hair</td>\n",
+       "      <td>Dilute tortoiseshell</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2017-04-18 00:00:00</td>\n",
+       "      <td>Foster</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2018-05-29 00:00:00</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Died in care</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>31469</td>\n",
+       "      <td>2013-03-26 00:00:00</td>\n",
+       "      <td>Incompatible with owner lifestyle</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D1303720</td>\n",
+       "      <td>981020007006095</td>\n",
+       "      <td>Bonnie</td>\n",
+       "      <td>Basenji/Mix</td>\n",
+       "      <td>Brown and White</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2013-03-30 00:00:00</td>\n",
+       "      <td>Adoption</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2017-05-08 00:00:00</td>\n",
+       "      <td>Incompatible with owner lifestyle</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Died in care</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10285</th>\n",
+       "      <td>64584</td>\n",
+       "      <td>2019-08-27 16:52:09</td>\n",
+       "      <td>Litter relinquishment</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C19081429</td>\n",
+       "      <td>981020029330984</td>\n",
+       "      <td>Max</td>\n",
+       "      <td>Domestic Medium Hair</td>\n",
+       "      <td>Orange and White</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2019-08-29 00:00:00</td>\n",
+       "      <td>Adoption</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Court Order/ Legal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10286</th>\n",
+       "      <td>64588</td>\n",
+       "      <td>2019-08-27 18:14:11</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>0</td>\n",
+       "      <td>C19081418</td>\n",
+       "      <td>981020033133599</td>\n",
+       "      <td>Punkin</td>\n",
+       "      <td>Domestic Short Hair</td>\n",
+       "      <td>Calico</td>\n",
+       "      <td>Cat</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2019-08-28 00:00:00</td>\n",
+       "      <td>Foster</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Court Order/ Legal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10287</th>\n",
+       "      <td>64606</td>\n",
+       "      <td>2019-08-29 12:10:21</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D19081440</td>\n",
+       "      <td>0A1243400C</td>\n",
+       "      <td>Dozer</td>\n",
+       "      <td>Coonhound</td>\n",
+       "      <td>Red</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2019-08-29 00:00:00</td>\n",
+       "      <td>Reclaimed</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Court Order/ Legal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10288</th>\n",
+       "      <td>64608</td>\n",
+       "      <td>2019-08-29 18:58:06</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D19081421</td>\n",
+       "      <td>982000363034690</td>\n",
+       "      <td>Lucy Farmer</td>\n",
+       "      <td>Beagle</td>\n",
+       "      <td>Tricolour</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2019-08-30 00:00:00</td>\n",
+       "      <td>Reclaimed</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Court Order/ Legal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10289</th>\n",
+       "      <td>64609</td>\n",
+       "      <td>2019-08-30 10:22:37</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>0</td>\n",
+       "      <td>D19081442</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Rocky Hartfield</td>\n",
+       "      <td>Labrador Retriever</td>\n",
+       "      <td>Brown</td>\n",
+       "      <td>Dog</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2019-08-30 00:00:00</td>\n",
+       "      <td>Reclaimed</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Stray</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Court Order/ Legal</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>7288 rows × 23 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id           intakedate                       intakereason  \\\n",
+       "0      15801  2009-11-28 00:00:00                             Moving   \n",
+       "1      15932  2009-12-08 00:00:00                             Moving   \n",
+       "2      28859  2012-08-10 00:00:00                          Abandoned   \n",
+       "3      30812  2013-01-11 00:00:00                          Abandoned   \n",
+       "5      31469  2013-03-26 00:00:00  Incompatible with owner lifestyle   \n",
+       "...      ...                  ...                                ...   \n",
+       "10285  64584  2019-08-27 16:52:09              Litter relinquishment   \n",
+       "10286  64588  2019-08-27 18:14:11                              Stray   \n",
+       "10287  64606  2019-08-29 12:10:21                              Stray   \n",
+       "10288  64608  2019-08-29 18:58:06                              Stray   \n",
+       "10289  64609  2019-08-30 10:22:37                              Stray   \n",
+       "\n",
+       "       istransfer sheltercode identichipnumber       animalname  \\\n",
+       "0               0   C09115463       0A115D7358           Jadzia   \n",
+       "1               0   D09125594       0A11675477            Gonzo   \n",
+       "2               0   D12082309       0A13253C7B           Maggie   \n",
+       "3               0    C1301091       0A13403D4D      Pretty Girl   \n",
+       "5               0    D1303720  981020007006095           Bonnie   \n",
+       "...           ...         ...              ...              ...   \n",
+       "10285           0   C19081429  981020029330984              Max   \n",
+       "10286           0   C19081418  981020033133599           Punkin   \n",
+       "10287           0   D19081440       0A1243400C            Dozer   \n",
+       "10288           0   D19081421  982000363034690      Lucy Farmer   \n",
+       "10289           0   D19081442              NaN  Rocky Hartfield   \n",
+       "\n",
+       "                     breedname            basecolour speciesname  ...  \\\n",
+       "0          Domestic Short Hair                Tortie         Cat  ...   \n",
+       "1      German Shepherd Dog/Mix                   Tan         Dog  ...   \n",
+       "2      Shep Mix/Siberian Husky               Various         Dog  ...   \n",
+       "3          Domestic Short Hair  Dilute tortoiseshell         Cat  ...   \n",
+       "5                  Basenji/Mix       Brown and White         Dog  ...   \n",
+       "...                        ...                   ...         ...  ...   \n",
+       "10285     Domestic Medium Hair      Orange and White         Cat  ...   \n",
+       "10286      Domestic Short Hair                Calico         Cat  ...   \n",
+       "10287                Coonhound                   Red         Dog  ...   \n",
+       "10288                   Beagle             Tricolour         Dog  ...   \n",
+       "10289       Labrador Retriever                 Brown         Dog  ...   \n",
+       "\n",
+       "              movementdate movementtype istrial           returndate  \\\n",
+       "0      2017-05-13 00:00:00     Adoption     0.0                  NaN   \n",
+       "1      2017-04-24 00:00:00     Adoption     0.0                  NaN   \n",
+       "2      2017-04-15 00:00:00     Adoption     0.0                  NaN   \n",
+       "3      2017-04-18 00:00:00       Foster     0.0  2018-05-29 00:00:00   \n",
+       "5      2013-03-30 00:00:00     Adoption     0.0  2017-05-08 00:00:00   \n",
+       "...                    ...          ...     ...                  ...   \n",
+       "10285  2019-08-29 00:00:00     Adoption     0.0                  NaN   \n",
+       "10286  2019-08-28 00:00:00       Foster     0.0                  NaN   \n",
+       "10287  2019-08-29 00:00:00    Reclaimed     0.0                  NaN   \n",
+       "10288  2019-08-30 00:00:00    Reclaimed     0.0                  NaN   \n",
+       "10289  2019-08-30 00:00:00    Reclaimed     0.0                  NaN   \n",
+       "\n",
+       "                          returnedreason  deceaseddate      deceasedreason  \\\n",
+       "0                                  Stray           NaN        Died in care   \n",
+       "1                                  Stray           NaN        Died in care   \n",
+       "2                                  Stray           NaN        Died in care   \n",
+       "3                                  Stray           NaN        Died in care   \n",
+       "5      Incompatible with owner lifestyle           NaN        Died in care   \n",
+       "...                                  ...           ...                 ...   \n",
+       "10285                              Stray           NaN  Court Order/ Legal   \n",
+       "10286                              Stray           NaN  Court Order/ Legal   \n",
+       "10287                              Stray           NaN  Court Order/ Legal   \n",
+       "10288                              Stray           NaN  Court Order/ Legal   \n",
+       "10289                              Stray           NaN  Court Order/ Legal   \n",
+       "\n",
+       "      diedoffshelter puttosleep isdoa  \n",
+       "0                  0          0     0  \n",
+       "1                  0          0     0  \n",
+       "2                  0          0     0  \n",
+       "3                  0          0     0  \n",
+       "5                  0          0     0  \n",
+       "...              ...        ...   ...  \n",
+       "10285              0          0     0  \n",
+       "10286              0          0     0  \n",
+       "10287              0          0     0  \n",
+       "10288              0          0     0  \n",
+       "10289              0          0     0  \n",
+       "\n",
+       "[7288 rows x 23 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Use Pandas to pull in data to create DataFrames\n",
+    "#Use Pandas to \n",
+    "Pet_Set1= pd.read_csv(\"./Data/animal-data-1.csv\")\n",
+    "Seattle_Pet= pd.read_csv(\"./Data/Seattle_Pet_Licenses.csv\")\n",
+    "Pet_Set1.head()\n",
+    "Cleaned_Pet1 = Pet_Set1.drop_duplicates(subset=\"id\")\n",
+    "Cleaned_Pet1\n",
+    "# Pet_Set1[\"deceaseddate\"].value_counts()\n",
+    "# Cleaned_PetSet = Pet_Set1.dropna()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "speciesname  breedname                           \n",
+       "Cat          Domestic Short Hair                     4708\n",
+       "             Domestic Medium Hair                     409\n",
+       "             Domestic Long Hair                       363\n",
+       "Dog          Bully Breed Mix                          262\n",
+       "             Labrador Retriever                       178\n",
+       "                                                     ... \n",
+       "             Labrador Retriever/Coonhound               1\n",
+       "             Labrador Retriever/Dachshund               1\n",
+       "             Labrador Retriever/Dalmatian               1\n",
+       "             Labrador Retriever/Doberman Pinscher       1\n",
+       "Bird         African Grey                               1\n",
+       "Length: 806, dtype: int64"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "Question1 = Pet_Set1[['speciesname', 'breedname']]\n",
+    "Question1.value_counts()\n",
+    "# Question1.head(25)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dog     32033\n",
+       "Cat     14683\n",
+       "Goat       29\n",
+       "Pig         3\n",
+       "Name: Species, dtype: int64"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Seattle_Pet['Species'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
